Basic shoe spreadsheet commands.

--- a/templates/shoe/shoe_list.html.twig
+++ b/templates/shoe/shoe_list.html.twig
@@ -11,7 +11,7 @@
     <table>
     {% for shoe in shoes %}
         <tr>
-            <td>{{ shoe.code }}</td>
+            <td>{{ shoe.codeColor }}</td>
             <td>{{ shoe.name }}</td>
             <td>{{ shoe.color }}</td>
         </tr>
