--- a/templates/shoe/shoe_list.html.twig
+++ b/templates/shoe/shoe_list.html.twig
@@ -1,21 +1,25 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Shoe Listing</h1>
-    <table>
-    {% for shoe in shoes %}
-        <tr>
-            <td>{{ shoe.codeColor }}</td>
-            <td>{{ shoe.name }}</td>
-            <td>{{ shoe.color }}</td>
-        </tr>
-    {%  endfor %}
+<div class="container">
+    <table class="table table-bordered table-striped">
+        <thead class="thead-light">
+            <tr><th colspan="3" class="text-center">Shoe Listing</th></tr>
+            <tr>
+                <th>Code</th>
+                <th>Name</th>
+                <th>Color</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for shoe in shoes %}
+            <tr>
+                <td><a href="{{ path('shoe_edit', {shoeCode: shoe.code}) }}">{{ shoe.codeColor }}</a></td>
+                <td>{{ shoe.name }}</td>
+                <td>{{ shoe.color }}</td>
+            </tr>
+            {%  endfor %}
+        </tbody>
     </table>
 </div>
 {% endblock %}
