--- a/templates/shoe_store/list.html.twig
+++ b/templates/shoe_store/list.html.twig
@@ -1,16 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 
 {% block body %}
-
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    </style>
-
-    <div class="example-wrapper">
+    <div class="container">
         <h1>Shoe Listing</h1>
         {{ form(form) }}
-        <table>
+        <table class="table table-bordered table-striped">
             {% for shoeStore in shoeStores %}
                 <tr>
                     <td>{{ shoeStore.store }}</td>
